--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                 change_colour: 'this.player.colour = "#"+(Math.random()*0xFFFFFF<<0).toString(16);',
                 /* you could load a new map variable here */
                 next_level: 'alert("Yay! You won! Reloading map.");this.load_map(map);',
-                death: 'alert("You died!");this.load_map(map);',
+                death: 'alert("You died! Please Try Again!");this.load_map(map);',
                 unlock: 'this.current_map.keys[10].solid = 0;this.current_map.keys[10].colour = "#888";'
             }
         };
